[tool.poetry]
name = "dictator"
version = "0.1.0"
description = "The Dictator of 2HOL. Taking care of displaying user and player information about Two Hours One Life in our Discord guild."
authors = ["connorhsm <connorhsmith@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
configparser = "^5.0.1"
mysql-connector-python = "^8.0.24"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
